portfolio/src/main/webapp/style.css
html {
    height: 100%;
}

body {
  display: flex;
  flex-flow: row nowrap;
  height: 100%;
  margin: 0;
  padding: 0;
  font-family: sans-serif;
}

h1 {
  font-family: "Montserrat", sans-serif;
  font-weight: 900;
}

h2 {
  font-family: "Montserrat", sans-serif;
  font-weight: 800;
}

h3 {
  font-family: "Montserrat", sans-serif;
  font-weight: 700;
}

ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

li {
  background-color: #F5F5F5;
  border-left: 3px solid #ee2579;
  margin-bottom: 10px;
  padding: 5px 5px 5px 10px;
}

hr {
  background-color: #212121;
  border-width: 0px;
  color: #212121;
  height: 1px;
}

#sidebar {
  background-color: #212121;
  display: flex;
  flex-direction: column;
}

#initials {
  align-items: center;
  background-color: #212121;
  display: flex;
  font-family: "Montserrat", sans-serif;
  font-size: 22pt;
  font-weight: 900;
  height: 70px;
  justify-content: center;
  width: 100px;
}

#initial-z {
  color: #FFFFFF;
}

#initial-r {
  color: #ee2579;
}

.tab-content {
  display: none;
}

.tab-button {
  background-color: #ee2579;
  border: none;
  border-top: 1px solid #8a1545;
  color: #FFFFFF;
  font-size: 12pt;
  height: 70px;
  outline-color: #ee2579;
  text-align: center;
  transition-duration: 0.35s;
  width: 100px;
}

.tab-button:focus,
.tab-button:hover {
  background-color: #8a1545;
  color: #FFFFFF;
}

.open {
  background-color: #FFFFFF;
  color: #000000;
  display: inline;
}

#media-links {
  align-items: center;
  display: flex;
  flex-flow: column nowrap;
  padding: 10px;
}

#media-links a {
  outline-color: #ee2579;
}

#media-links img {
  padding-top: 10px;
  width: 40px;
}

#content {
  height: 100%;
  margin-left: auto;
  margin-right: auto;
  overflow-y: scroll;
  padding: 0 10px 0 10px;
  width: 850px;
}

#greeting-container {
  margin-top: 20px;
}

.subtitle {
  color: #828282;
  font-family: 'Roboto Mono', monospace;
  font-size: 10pt;
}

.tool {
  border-radius: 3px;
  font-family: 'Roboto Mono', monospace;
  font-size: 10pt;
  padding: 2px 5px 2px 5px;
}
.html-tag {
  background-color: #e34f26;
  color: #FFFFFF;
}

.css-tag {
  background-color: #563d7c;
  color: #FFFFFF;
}

.javascript-tag {
  background-color: #f7df1e;
  color: #000000;
}

.python-tag {
  background-color: #4b8bbe;
  color: #FFFFFF;
}

.appengine-tag {
  background-color: #4285f4;
  color: #FFFFFF;
}

